@@ -1,4 +1,4 @@
-%w(keys indifferent_access reverse_merge conversions diff slice).each do |ext|
+%w(keys indifferent_access reverse_merge conversions diff slice except).each do |ext|
   require "#{File.dirname(__FILE__)}/hash/#{ext}"
 end
 
@@ -9,4 +9,5 @@ class Hash #:nodoc:
   include ActiveSupport::CoreExtensions::Hash::Conversions
   include ActiveSupport::CoreExtensions::Hash::Diff
   include ActiveSupport::CoreExtensions::Hash::Slice
+  include ActiveSupport::CoreExtensions::Hash::Except
 end
